2010-10-28  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (OPENPGP_CARD_INITIAL_PW3): New.
	* src/ac.c (verify_admin_0): Use OPENPGP_CARD_INITIAL_PW3.

2010-10-23  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.3.

	* src/usb_desc.c (gnukStringSerial): Updated.

2010-10-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (.gnuk_random): Fix description so that
	padding with 0xffffffff will be in gnuk.hex.

	* src/openpgp.c (file_selection): Change type (was: int).
	(FILE_NONE..FILE_EF_SERIAL): Change the values.

	* src/configure: Added STBee Mini support.
	* boards/STBEE_MINI/mcuconf.h: New.
	* boards/STBEE_MINI/board.mk: New.
	* boards/STBEE_MINI/board.h: New.
	* boards/STBEE_MINI/board.c: New.

	* ChibiOS_2.0.2/os/hal/platforms/STM32/hal_lld.c
	(pal_default_config): STBee Mini uses STM32F103CBT6 which expose
	no GPIO E port.

2010-10-21  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/common/hw_config.c (Get_SerialNum): Removed.
	* src/usb_prop.c (gnuk_device_init): Remove calling Get_SerialNum.
	* src/usb_desc.c (gnukStringSerial): Updated.
	* boards/CQ_STARM/board.c (set_led): Fix polarity.

2010-10-20  NIIBE Yutaka  <gniibe@fsij.org>

	* FSIJ_SERIAL_NUMBER: New.
	* src/configure (with_fsij): Added FSIJ serial number support.
	* src/config.h.in (@FSIJ_DEFINE@, @SERIAL_NUMBER_FOUR_BYTES@): New.

	* src/configure: Added CQ STARM target.
	* boards/CQ_STARM/mcuconf.h: New.
	* boards/CQ_STARM/board.mk: New.
	* boards/CQ_STARM/board.h: New.
	* boards/CQ_STARM/board.c: New.

2010-10-19  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STM32_PRIMER2/board.mk (BOARDSRC): Use common/hw_config.c.
	* boards/OLIMEX_STM32_H103/board.mk (BOARDSRC): Likewise.

	* boards/common/hw_config.c: Move board specific functions to ...
	* boards/STM32_PRIMER2/board.c (USB_Cable_Config, set_led): ... here.
	* boards/OLIMEX_STM32_H103/board.c (USB_Cable_Config, set_led): Ditto.

	* boards/{OLIMEX_STM32_H103,STM32_PRIMER2}/hw_config.c: Removed.